PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-99_soustraction_invalide1/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:13: error: lvalue required as decrement operand
    3 |     return 2--1;
      |             ^~
input.c:3:15: error: expected ‘;’ before numeric constant
    3 |     return 2--1;
      |               ^
      |               ;

return code: 1
